@@ -2,6 +2,15 @@
 
         Merge from stable.
 	
+	* gconf/gconf.c (gconf_engine_set): check UTF-8 validity here,
+	instead of at the higher levels	
+
+	* gconf/gconf-value.c (gconf_value_validate): new internal function
+
+2001-10-12  Havoc Pennington  <hp@redhat.com>
+
+        Merge from stable.
+	
 	* tests/testschemas.c (check_schema_storage): add some UTF-8
 
 	* tests/testpersistence.c: UTF-8 test
